--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/academia.html" class="icons">
+                <a href="academia.html" class="icons">
                   <i class="fas fa-graduation-cap fa-3x"></i>
                 </a>
                 <hr />
