added some areas

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               > 
-                <a class="icons">
+                <a href="templates/arte_cultura.html" class="icons">
                   <i class="fas fa-paint-brush fa-3x"></i>
                 </a>
                 <hr />
@@ -266,7 +266,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a class="icons">
+                <a href="templates/comunicacion.html" class="icons">
                   <i class="fas fa-bullhorn fa-3x"></i>
                 </a>
                 <hr />
@@ -281,7 +281,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a class="icons">
+                <a href="templates/bienestar_saludmental.html" class="icons">
                   <i class="fas fa-heartbeat fa-3x"></i>
                 </a>
                 <hr />
@@ -294,7 +294,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a class="icons">
+                <a href="templates/comunidad_inclusion.html" class="icons">
                   <i class="fas fa-people-carry fa-3x"></i>
                 </a>
                 <hr />
@@ -307,7 +307,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a class="icons">
+                <a href="templates/deportes.html" class="icons">
                   <i class="fas fa-running fa-3x"></i>
                 </a>
                 <hr />
