finished consejeria proyects

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/feminismo_diversidadsexual.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-venus-double fa-3x"></i>
                 </a>
                 <hr />
@@ -340,7 +340,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/postgrado.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-university fa-3x"></i>
                 </a>
                 <hr />
@@ -353,7 +353,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/proyectos.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-info fa-3x"></i>
                 </a>
                 <hr />
@@ -368,7 +368,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/rolsocial_representacion.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-hands-helping fa-3x"></i>
                 </a>
                 <hr />
@@ -381,7 +381,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/sustentabilidad_medioambiente.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-globe-americas fa-3x"></i>
                 </a>
                 <hr />
@@ -394,7 +394,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/vida_universitaria.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-users fa-3x"></i>
                 </a>
                 <hr />
@@ -607,7 +607,7 @@
                     data-aos-easing="linear"
 
                   >
-                    <a href="templates/academia.html" class="icons">
+                    <a href="templates/comunidad_ca.html" class="icons">
                       <i style="color: #43485c" class="fas fa-people-carry fa-3x"></i>
                     </a>
                     <hr style="background-color: #43485c;"/>
@@ -620,7 +620,7 @@
                     data-aos="fade-in"
                     data-aos-easing="linear"
                   > 
-                    <a href="templates/arte_cultura.html" class="icons">
+                    <a href="templates/bienestar_ca.html" class="icons">
                       <i style="color: #43485c" class="fas fa-heartbeat fa-3x"></i>
                     </a>
                     <hr style="background-color: #43485c" />
@@ -633,7 +633,7 @@
                     data-aos="fade-in"
                     data-aos-easing="linear"
                   >
-                    <a href="templates/comunicacion.html" class="icons">
+                    <a href="templates/investigacion_ca.html" class="icons">
                       <i style="color: #43485c" class="fas fa-graduation-cap fa-3x"></i>
                     </a>
                     <hr style="background-color: #43485c" />
