--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
       crossorigin="anonymous"
     ></script>
     <link rel="icon" type="image/png" href="favicon.png" />
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/images/favicon/favicon.ico">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/images/favicon/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/images/favicon/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/images/favicon/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16.png">
+    <link rel="apple-touch-icon" href="/images/favicon/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/favicon-180.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="/images/favicon/favicon-144.png">
+    <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
+
   </head>
 
   <body>
@@ -235,7 +258,7 @@
 
               <h2 class="subtitle" style="text-justify: inter-word;">
                 Creemos que debemos dar las herramientas necesarias a los estudiantes
-                para que puedan encontrar su espacio dentro de la escuela. 
+                para que puedan encontrar su espacio dentro de la escuela.
               </h2>
               <br />
             </div>
@@ -257,7 +280,7 @@
                 class="column is-4 has-text-centered"
                 data-aos="fade-in"
                 data-aos-easing="linear"
-              > 
+              >
                 <a href="templates/arte_cultura.html" class="icons">
                   <i class="fas fa-paint-brush fa-3x"></i>
                 </a>
@@ -446,7 +469,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="column is-one-third" 
+                  <div class="column is-one-third"
                   data-aos="fade-in"
                   data-aos-easing="linear">
                       <div class="card large">
@@ -491,7 +514,7 @@
                                   </div>
                               </div>
                               <div class="content">
-                                  Iniciativa dirigida a niños provenientes de poblaciones en situación vulnerable ubicadas 
+                                  Iniciativa dirigida a niños provenientes de poblaciones en situación vulnerable ubicadas
                                   en la ciudad de Santiago. Se busca que estudiantes de la escuela realicen con
                                   herramientas ingenieriles adaptadas para los niños de la edad, talleres enfocados en
                                   programación, estructura, entre otras actividades de ingenio.
@@ -502,7 +525,7 @@
                   </div>
                 </div>
                 <div class="row columns is-multiline">
-                  <div class="column is-one-third" 
+                  <div class="column is-one-third"
                   data-aos="fade-in"
                   data-aos-easing="linear">
                       <div class="card large">
@@ -529,7 +552,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="column is-one-third" 
+                  <div class="column is-one-third"
                   data-aos="fade-in"
                   data-aos-easing="linear">
                       <div class="card large">
@@ -546,14 +569,14 @@
                                   </div>
                               </div>
                               <div class="content">
-                                Ecosistemización de viviendas mediante el uso de sistemas de agua lluvia, mejora de aislamiento o construirlas 
-                                considerando la Bioarquitectura, como también buscando que estas tengan 
+                                Ecosistemización de viviendas mediante el uso de sistemas de agua lluvia, mejora de aislamiento o construirlas
+                                considerando la Bioarquitectura, como también buscando que estas tengan
                                 un rol ecosistémico en el lugar que sean emplazadas, contribuyendo a la conservación de la naturaleza del sector.
                               </div>
                           </div>
                       </div>
                   </div>
-                  <div class="column is-one-third" 
+                  <div class="column is-one-third"
                   data-aos="fade-in"
                   data-aos-easing="linear">
                       <div class="card large">
@@ -594,7 +617,7 @@
                   data-aos-easing="linear"
                 >
                   <h1 class="title has-text-centered section-title">Consejería Académica</h1>
-    
+
                   <h2 class="subtitle" style="text-justify: inter-word;">
                       Nuestra misión como consejería es empatizar, apoyar y preocuparnos por el bienestar de nuestros compañeros. Incentivarlos a que desarrollen su potencial y que aprovechen las oportunidades que brinda nuestra Escuela, siempre apuntando a crear una comunidad más unida en ingeniería
                   </h2>
@@ -619,7 +642,7 @@
                     class="column is-4 has-text-centered"
                     data-aos="fade-in"
                     data-aos-easing="linear"
-                  > 
+                  >
                     <a href="templates/bienestar_ca.html" class="icons">
                       <i style="color: #43485c" class="fas fa-heartbeat fa-3x"></i>
                     </a>
