--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="column is-6 right-image " data-aos="fade-left">
               <img
                 class="is-rounded"
-                src="../images/equipo.jpeg"
+                src="../images/equipo_final.jpg"
                 alt=""
               />
             </div>
