--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
                 En él buscamos abarcar los proyectos necesarios para lograr cubrir
                 la mayor parte de los ODS.
               </h2>
-              <form style="margin-bottom: 2rem;" target="_blank" action="https://drive.google.com/file/d/18CPSr-IeMwGvNgMXCeemU8N_4i_bf9fZ/view">
+              <form style="margin-bottom: 2rem;" target="_blank" action="https://drive.google.com/file/d/15Ii6c9GeSSH5Dz8efx_CjAIPpVAKg2qK/view">
                 <button class="button">
                   Programa Directiva&emsp;<i class="fad fa-download fa-lg"></i>
                 </button>
               </form>
-              <form target="_blank" action="https://drive.google.com/file/d/1mP6muyZ6DMB61xNjseFCe3RArG0CTXrr/view?usp=sharing">
+              <form target="_blank" action="https://drive.google.com/file/d/1ypwLIDivSLIYv6Ju_2RoSwzgNkd8N7YK/view">
                 <button class="button">
                   Programa Consejería&emsp;<i class="fad fa-download fa-lg"></i>
                 </button>
