--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div class="column is-6 right-image " data-aos="fade-left">
               <img
                 class="is-rounded"
-                src="../images/foto_directiva.jpeg"
+                src="../images/equipo_final.jpg"
                 alt=""
               />
             </div>
