--- a/index.html
+++ b/index.html
@@ -448,6 +448,33 @@
                       <div class="card large">
                           <div class="card-image">
                               <figure class="image">
+                                  <img style="height: 40%;" src="../images/ing2_picture.jpg" alt="Image">
+                              </figure>
+                          </div>
+                          <div class="card-content">
+                              <div class="media">
+                                  <div class="media-content">
+                                      <p class="title is-4 no-padding">Unidad de Bienestar</p>
+                                      <p><span class="title is-6"><a href="https://www.un.org/sustainabledevelopment/es/cities/">Salud y Bienestar</a></span></p>
+                                  </div>
+                              </div>
+                              <div class="content">
+                                Ya iniciamos conversaciones con la Escuela, por lo que está en proceso de
+                                evaluación la implementación en concreto de esta medida. Las opciones que asoman con
+                                mayor fuerza son la creación de una nueva Unidad de Bienestar, o bien un plan transversal
+                                a las direcciones ya existentes de modo que la cultura del CARE pueda llegar de forma
+                                activa al estudiantado en actividades del día día.
+                                  <div class="background-icon"><span class="icon-twitter"></span></div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="column is-one-third"
+                  data-aos="fade-in"
+                  data-aos-easing="linear">
+                      <div class="card large">
+                          <div class="card-image">
+                              <figure class="image">
                                   <img style="height: 40%;" src="../images/ing_picture.jpg" alt="Image">
                               </figure>
                           </div>
@@ -464,34 +491,6 @@
                                   Los beneficios de estos elementos en temas de eficiencia energética, disminución
                                   de temperaturas y beneficios ecosistémicos, han sido comprobados cientı́ficamente
                                   y tenemos que aprovechar a nuestros docentes.
-                                  <div class="background-icon"><span class="icon-twitter"></span></div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="column is-one-third"
-                  data-aos="fade-in"
-                  data-aos-easing="linear">
-                      <div class="card large">
-                          <div class="card-image">
-                              <figure class="image">
-                                  <img style="height: 40%;" src="../images/ing2_picture.jpg" alt="Image">
-                              </figure>
-                          </div>
-                          <div class="card-content">
-                              <div class="media">
-                                  <div class="media-content">
-                                      <p class="title is-4 no-padding">Infraestructura</p>
-                                      <p><span class="title is-6"><a href="https://www.un.org/sustainabledevelopment/es/cities/">Ciudades y comunidades sostenibles</a></span></p>
-                                      <p class="subtitle is-6">Edificios Net Positive</p>
-                                  </div>
-                              </div>
-                              <div class="content">
-                                  Tecnologı́as aplicadas a nuevas energı́as limpias están cada
-                                  vez más presentes. Es por esto que todos los edificios nuevos
-                                  deben ser planteados de manera que sus gastos energéticos sean abastecidos
-                                  por energı́as provenientes del mismo edificio, sea mediante paneles solares,
-                                  energı́a eólica u otras.
                                   <div class="background-icon"><span class="icon-twitter"></span></div>
                               </div>
                           </div>
