--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
               </p>
               <br />
               <p>
-                Soñamos con encontrarle
-                sentido a la carrera, con ayudar a formar ingenieros ı́ntegros que tengan empatı́a y
-                sean conscientes de su entorno, ya sea de la persona que se encuentra al lado, de
-                un profesor, de un funcionario, de un vecino de la comuna o de nuestro planeta.
-                Soñamos con un verdadero desarrollo sostenible de la Facultad de Ingenierı́a.
+                Soñamos con un desarrollo sostenible trascendente en la Facultad de Ingenierıa, 
+                El Centro de Alumnos debe ser trascendental, educativo, cercano, transparente, 
+                consciente, innovador y vinculante. Desde aquí,  podemos trabajar en conjunto iniciativas y proyectos concretos.
+                Los proyectos y el programa acogen los 17 Objetivos de Desarrollo Sostenible, y buscamos trabajarlos durante todo 
+                el año y que toda la comunidad los haga parte suyo
               </p>
               <br />
               <div class="is-divider"></div>
