--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               </p>
               <br />
               <p>
-                Soñamos con un desarrollo sostenible trascendente en la Facultad de Ingenierıa, 
+                Soñamos con un desarrollo sostenible trascendente en la Facultad de Ingeniería, 
                 El Centro de Alumnos debe ser trascendental, educativo, cercano, transparente, 
                 consciente, innovador y vinculante. Desde aquí,  podemos trabajar en conjunto iniciativas y proyectos concretos.
                 Los proyectos y el programa acogen los 17 Objetivos de Desarrollo Sostenible, y buscamos trabajarlos durante todo 
